modifica modulo wifite e correzione lato front end della pagina progetto

--- a/Views/Modulo/Create.cshtml
+++ b/Views/Modulo/Create.cshtml
@@ -1880,7 +1880,7 @@
                                              <div class="form-group row">
                                                 <div class="col-sm-6">
                                                     <label class="control-label">
-                                                        <input type="checkbox" asp-for="@Model.WIFITE.mac" /> MAC (-i)
+                                                        <input type="checkbox" asp-for="@Model.WIFITE.mac" /> MAC (-mac)
                                                     </label>
                                                 </div>
                                             </div>
@@ -1894,7 +1894,7 @@
                                         <div class="form-group row">
                                                 <div class="col-sm-6">
                                                     <label class="control-label">
-                                                        <input type="checkbox" asp-for="@Model.WIFITE.client" /> Client(-i)
+                                                        <input type="checkbox" asp-for="@Model.WIFITE.client" /> Client(-co)
                                                     </label>
                                                 </div>
                                             </div>
