--- a/Views/Progetto/Details.cshtml
+++ b/Views/Progetto/Details.cshtml
@@ -13,7 +13,7 @@ var contWifite = 0;
 }
 <br>
 <div class="container">
-<h2>Dettagli @Html.DisplayFor(model => model.Nome)</h2>
+<h2><em>Dettagli</em><strong>@Html.DisplayFor(model => model.Nome)</strong></h2>
   <a  class="btn btn-default"asp-action="Run" asp-route-id="@Model.ID"> Avvia scan</a>
 <hr />
 <div class="col-md-12">
