--- a/Views/Progetto/Index.cshtml
+++ b/Views/Progetto/Index.cshtml
@@ -4,7 +4,7 @@
 
 <div class="container">
     <div class="row">
-        <h2>Progetti</h2>
+        <h2><em>Progetti</em></h2>
         <p class="lead">
             I progetti presenti sono questi! Per creare un nuovo progetto <a href="/Progetto/Create">clicca qui </a>!
         </p>
