--- a/Views/Modulo/Delete.cshtml
+++ b/Views/Modulo/Delete.cshtml
@@ -21,14 +21,6 @@
 
                             </div>
                             </div>
-                             <div class="col-sm-9" style="margin:5ex;  float:none">
-                                            <div class="form-group row">
-                                                <h4 >ID Modulo</h4><hr />
-                                                <dd>  @Html.DisplayFor(model => model.ID)
-                                            </dd>
-
-                             </div>
-                             </div>
                             <div class="col-sm-9" style="margin:5ex;  float:none">
                                             <div class="form-group row">
                                                 <h4 >Tipo</h4><hr />
@@ -51,7 +43,7 @@
                  <div class="col-xs-6 col-sm-offset-5 text-right">
                      <br>
                     <div class="form-group">
-                        <a class="btn btn-default" asp-action="Delete" asp-route-id="@Model.ID" > Cancella </a>&nbsp;&nbsp;|
+                        <input type="submit" class="btn btn-default" asp-action="Delete" asp-route-id="@Model.ID" value="Cancella"> &nbsp;&nbsp;|
                         <a asp-action="Index">  Torna alla lista</a>
                     </div>
                 </div>
