--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -27,6 +27,7 @@
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
                     <a class="navbar-brand" href="/">
+                    <span class="glyphicon glyphicon-home"></span>
                         <strong> WEBMVA</strong>
                     </a>
                 </div>
